# MarkdownVault

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  evaluate_quality.py  example.py  integration_tests.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
markdown_vector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plans/: development_plan.md  requirement.md  統一履歷匯總.md
scripts/: deploy.sh  start.sh
src/: __init__.py  embedding_provider.py  file_processor.py  markdown_cleaner.py  text_splitter.py  vector_database.py
tests/: integration_tests.py  test_integration_markdown_cleaning.py  test_markdown_cleaner.py  tests.py
